fanout-ingressNEW.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress-xcite
  namespace: arnoldas
  annotations:
#    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-production
#    nginx.ingress.kubernetes.io/proxy-body-size: 32m
#    kubernetes.io/tls-acme: "true"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth
#    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - jupyter"
#    ingress.kubernetes.io/rewrite-target
spec:
  rules:
  - host: xcite.asrc.albany.edu
    http:
      paths:
      - path: /ktyle
        pathType: ImplementationSpecific
        backend:
          service:
            name: kt-jl
            port:
              number: 8888
      - path: /emily
        pathType: ImplementationSpecific
        backend:
          service:
            name: emily-jl
            port:
              number: 8888
      - path: /brennan
        pathType: ImplementationSpecific
        backend:
          service:
            name: brennan-jl
            port:
              number: 8888
      - path: /will
        pathType: ImplementationSpecific
        backend:
          service:
            name: will-jl
            port:
              number: 8888
      - path: /nick-kce
        pathType: ImplementationSpecific
        backend:
          service:
            name: nick-kce-jl
            port:
              number: 8887
      - path: /coeweather
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-nick-php
            port:
              number: 80
      - path: /ShinyApps
        pathType: ImplementationSpecific
        backend:
          service:
            name: shiny
            port:
              number: 3838
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: meso-web
            port:
              number: 3000
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: keycloak
#            port:
#              number: 8080
#  tls:
#    - hosts:
#      - appsvr.asrc.albany.edu
#      secretName: letsencrypt-production
---
